infrastructure/longhorn/longhorn-networkpolicies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: limit-ingress-allow-egress-all
  namespace: longhorn-system
spec:
  podSelector: {}
  egress:
  - {}
  ingress:
  - from:
    - podSelector: {} 
  policyTypes:
  - Ingress
  - Egress
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-rwx
  namespace: longhorn-system
spec:
  endpointSelector:
    matchLabels:
      longhorn.io/component: share-manager
  ingress:
  - fromEntities:
    - remote-node
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: longhorn-manager-prometheus
  namespace: longhorn-system
spec:
  endpointSelector:
    matchLabels:
      app: longhorn-manager
  ingress:
  - fromEntities:
    - remote-node
    toPorts:
    - ports:
      - port: "9500"
        protocol: TCP
#---
#apiVersion: "cilium.io/v2"
#kind: CiliumNetworkPolicy
#metadata:
#  name: allow-k8s-host-access-to-longhorn-ui
#  namespace: longhorn-system
#spec:
#  endpointSelector:
#    matchLabels:
#      app: longhorn-ui
#  ingress:
#  - fromEntities:
#    - remote-node
